# cli

./: .gitignore  Cargo.toml  README.md  install.ps1  install.sh
.github/workflows/: release.yml
src/: config.rs  main.rs  polling.rs  update.rs
src/api/: client.rs  mod.rs  models.rs
src/crypto/: encrypt.rs  keys.rs  message_cache.rs  mod.rs  session.rs
src/ui/: mod.rs
