[package]
name = "migchat-cli"
version = "0.2.2"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dialoguer = "0.11"
console = "0.15"
colored = "2.1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
anyhow = "1.0"
tokio = { version = "1.41", features = ["full"] }
semver = "1.0"
self-replace = "1.5"
sha2 = "0.10"
# E2E Encryption dependencies
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
chacha20poly1305 = "0.10"
hkdf = "0.12"
hmac = "0.12"
rand = "0.8"
base64 = "0.22"
argon2 = "0.5"
zeroize = { version = "1.7", features = ["derive"] }

[target.'cfg(target_os = "linux")'.dependencies]
notify-rust = "4.0"
